Fixes z-index

--- a/styles/components/gallery/ImagePreview.module.scss
+++ b/styles/components/gallery/ImagePreview.module.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
 
-  z-index: var(--z-fixed);
+  z-index: var(--z-absolute);
 
   .exitButton {
     position: absolute;
